src/tags/app-header/app-header.style.module.scss
$top: var(--stick-top);
$size: var(--stick-size);
$scale: var(--stick-scale);
$pageLinksHeight: 3.5rem;

:root {
  --stick-top: 0px;
  --stick-size: calc(36px + 4rem);
  --stick-scale: calc(1 - tan(atan2(#{$size}, 1px)) / tan(atan2(100dvh, 1px)));

  @media (min-width: 48rem) and (min-height: 38rem) {
    --stick-size: calc(48px + 4rem);
  }
}

@mixin scroll-animate($name) {
  animation: $name linear both;
  animation-timeline: scroll(root);
  animation-range: $top calc($top + $size);
}

:global(#header) {
  z-index: 99;
  position: relative;
  display: flex;
  height: $size;
  align-items: center;
  font-weight: 500;
  --section-color: var(--color-foreground);
  &::before {
    z-index: -1;
    pointer-events: none;
    position: absolute;
    content: "";
    left: 0;
    right: 0;
    margin-left: calc(-1 * var(--root-gap));
    margin-right: calc(-1 * var(--root-gap));
    top: 0;
    bottom: -5%;
    background: linear-gradient(var(--color-background) 90%, transparent);
  }

  :global(.show-mobile-menu) & {
    visibility: visible;
    position: fixed;
    left: 0;
    right: 0;
    padding: 0 var(--root-gap);
    transform: none !important;
    background-color: var(--color-background);
  }

  @media (min-width: 48rem) and (min-height: 38rem) {
    gap: 4rem;
  }

  @supports (animation-timeline: scroll()) {
    position: sticky;
    top: 0;
    transform: translateY(0);
    will-change: transform;
    @include scroll-animate(sticky);
    @keyframes sticky {
      to {
        transform: translateY(-100%);
      }
    }
  }

  img {
    width: 180px;
    height: 36px;

    @media (min-width: 48rem) and (min-height: 38rem) {
      width: 240px;
      height: 48px;
    }
  }
}

.pageLinks {
  display: none;

  :global(.show-mobile-menu) & {
    position: absolute;
    display: flex;
    height: $pageLinksHeight;
    top: $size;
    left: 0;
    right: 0;
    padding: 0 var(root-gap);
    justify-content: space-around;
    align-items: center;
    font-weight: 300;
    font-size: 1.3rem;
    font-weight: 500;
    background-image: linear-gradient(
      to bottom,
      var(--color-red-dark),
      var(--color-red-light)
    );

    a {
      color: var(--color-white);

      &:first-of-type {
        display: none;
      }
    }
  }

  @media (min-width: 48rem) and (min-height: 38rem) {
    display: flex;
    gap: 4rem;
  }

  a {
    text-decoration: none;
    &:hover {
      @media (pointer: fine) {
        text-decoration-line: underline;
        text-decoration-thickness: 2px;
      }
    }
  }
}

#hamburger {
  display: flex;
  border: none;
  height: 4rem;
  padding: 1rem 0.5rem;
  place-items: center;
  place-content: center;
  background: none;
  color: var(--color-foreground);

  &::before {
    display: block;
    content: "";
    height: 18px;
    width: 18px;
    mask-size: 100% 100%;
    mask-image: url(./hamburger.svg?no-inline);
    background-color: currentColor;
  }

  @media (min-width: 48rem) and (min-height: 38rem) {
    display: none;

    /* If the user expands their screen while the nav is open */
    :global(.show-mobile-menu) & {
      display: block;
    }
  }
}

:global(html.show-mobile-menu) {
  overflow: hidden;
  visibility: hidden;

  & > body {
    overflow: hidden;
  }
}

#logo {
  margin-right: auto;
}

#docsearch {
  display: flex;
  place-items: center;
  place-content: center;
  flex-shrink: 1;
  @media (min-width: 64rem) and (min-height: 38rem) {
    width: 12.75rem;
  }

  button {
    display: flex;
    height: 4rem;
    width: 100%;
    padding: 1rem;
    background-origin: border-box;
    margin: 0;
    border-radius: 1.25rem;
    align-items: center;
    color: var(--color-foreground);
    -webkit-tap-highlight-color: transparent;
    @media (pointer: fine) {
      &:not(:disabled):is(:hover, :active, :focus) {
        color: var(--color-blue-dark);
        border-color: transparent;
      }
    }
    &::before {
      content: "";
      display: block;
      height: 18px;
      width: 18px;
      margin-left: 0.2rem;
      mask-size: 100% 100%;
      mask-image: url(./search.svg?no-inline);
      background-color: var(--color-foreground);
    }
    @media (min-width: 64rem) and (min-height: 38rem) {
      border: 2px solid var(--color-foreground);
      height: 2.5rem;
      background:
        linear-gradient(var(--color-background), var(--color-background))
          padding-box,
        linear-gradient(120deg, var(--color-blue-dark), var(--color-blue-light))
          border-box !important;
    }
  }
}
:global {
  .DocSearch {
    &-Button-Keys,
    &-Search-Icon,
    &-Button-Placeholder {
      display: none;
    }

    &-Modal {
      border: 2px solid transparent;
      border-radius: 0;

      @media (min-width: 48rem) {
        border-color: var(--color-blue-dark);
        border-radius: 35px;
      }
    }

    &-Container {
      backdrop-filter: blur(0.6rem);
    }

    &-Form {
      border: 2px solid var(--color-blue-dark);
      border-radius: 1.25rem;
      &:before {
        display: block;
        height: 1.25rem;
        width: 1.25rem;
        margin-left: 0.2rem;
        mask-image: url(./search.svg?no-inline);
        background-color: var(--color-foreground);
        content: "";
      }
    }

    &-Hit a {
      border-radius: 1.25rem;
    }

    &-Logo {
      .cls-1,
      .cls-2 {
        fill: var(--docsearch-muted-color);
      }
    }

    &-Footer {
      padding: 2rem;
    }
  }
}

:root {
  // docsearch
  --docsearch-primary-color: var(--color-blue-dark);
  --docsearch-text-color: currentColor;
  --docsearch-spacing: 1rem;
  --docsearch-icon-stroke-width: 1.4;
  --docsearch-highlight-color: var(--color-blue-dark);
  --docsearch-muted-color: #888;
  --docsearch-container-background: transparent;
  --docsearch-container-background: color-mix(
    in srgb,
    var(--color-blue-dim) 25%,
    transparent
  );
  --docsearch-logo-color: var(--color-blue-dark);
  --docsearch-modal-width: 50rem;
  --docsearch-modal-background: var(--color-background);
  --docsearch-modal-shadow: 0 0.5rem 5rem 0.5rem var(--color-blue-dim);
  --docsearch-searchbox-background: transparent;
  --docsearch-searchbox-focus-background: transparent;
  --docsearch-searchbox-shadow: transparent;
  --docsearch-hit-color: var(--color-foreground);
  --docsearch-hit-background: transparent;
  --docsearch-hit-shadow: transparent;
  --docsearch-key-shadow: transparent;
  --docsearch-key-pressed-shadow: transparent;
  --docsearch-footer-background: transparent;
  --docsearch-footer-shadow: transparent;
}

